--- a/app/src/main/res/layout/fragment_document_detail.xml
+++ b/app/src/main/res/layout/fragment_document_detail.xml
@@ -39,23 +39,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="8dp">
+            >
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_edit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginEnd="4dp"
-                android:text="Edit Document" />
-
-            <com.google.android.material.button.MaterialButton
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/btn_export"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginStart="4dp"
-                android:text="Export" />
+                android:layout_margin="16dp"
+                android:src="@android:drawable/ic_menu_share"
+                android:text="Share" />
 
         </LinearLayout>
 
